<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_chose_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:gravity="center"
                android:labelFor="@id/mode_picker"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/chose_mode"
                android:textSize="18sp"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/mode_picker"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp" />

            <TextView
                android:id="@+id/tv_input_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:labelFor="@id/et_number"
                android:text="@string/number_selection_instruction"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btn_submit_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/ok" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_enter_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/date_selector_instruction"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_random"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="80dp"
                android:text="@string/random_value" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_facts"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:justificationMode="inter_word"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/adView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    app:adSize="SMART_BANNER"
                    app:adUnitId="ca-app-pub-3940256099942544/6300978111"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/tv_about"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/about_short" />

                    <Button
                        android:id="@+id/btn_about"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/about_the_app" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>